--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!------------------------- End header ---------------------------->
 
     <!-- Start About -->
-    <div class="about-section">
+    <section class="about-section">
         <div class="row">
             <h1 class="title-section">Abouts</h1>
             <p class="intro-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consequuntur eos
@@ -62,7 +62,7 @@
             </div>
 
         </div>
-    </div>
+    </section>
     <!---------------------------- End About ---------------------------------->
 </body>
 
