--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/31bd191ea4.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./grid.css">
@@ -64,6 +65,48 @@
         </div>
     </section>
     <!---------------------------- End About ---------------------------------->
+
+    <!-- Star Product -->
+    <section class="product-section">
+        <h1 class="title-section">Products</h1>
+        <div class="row">
+            <div class="col span-1-of-3 product-box">
+                <div class="content">
+                    <h3>English Listen</h3>
+                    <p><span class="price">20$</span>/Month</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                    </ul>
+                    <a href="#" class="btn">Join us</a>
+                </div>
+            </div>
+            <div class="col span-1-of-3 product-box">
+                <div class="content">
+                    <h3>English Listen</h3>
+                    <p><span class="price">20$</span>/Month</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                    </ul>
+                    <a href="#" class="btn">Join us</a>
+                </div>
+            </div>
+            <div class="col span-1-of-3 product-box">
+                <div class="content">
+                    <h3>English Listen</h3>
+                    <p><span class="price">20$</span>/Month</p>
+                    <ul>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                        <li><i class="fas fa-check"></i>Leaning English</li>
+                    </ul>
+                    <a href="#" class="btn">Join us</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!------------------------------ End Product --------------------------------->
 </body>
 
 </html>
