--- a/index.html
+++ b/index.html
@@ -107,6 +107,54 @@
         </div>
     </section>
     <!------------------------------ End Product --------------------------------->
+
+    <!-- Star Testimonials -->
+    <section class="testimonials-section">
+        <h1 class="title-section">testimonials</h1>
+        <div class="row">
+
+            <div class="col span-1-of-3 testimonial-box">
+                <div class="content">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eius quis recusandae id
+                        aliquam eligendi ut neque minima dignissimos. Sit dicta eius rem nisi porro animi modi nemo
+                        distinctio officia.
+                    </blockquote>
+                    <figure>
+                        <img src="./img/person1.jpeg" alt="person">
+                        <span>Lorem Denfina</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="col span-1-of-3 testimonial-box">
+                <div class="content">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eius quis recusandae id
+                        aliquam eligendi ut neque minima dignissimos. Sit dicta eius rem nisi porro animi modi nemo
+                        distinctio officia.
+                    </blockquote>
+                    <figure>
+                        <img src="./img/person3.jpeg" alt="person">
+                        <span>Denfina</span> 
+                    </figure>
+                </div>
+            </div>
+            <div class="col span-1-of-3 testimonial-box">
+                <div class="content">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eius quis recusandae id
+                        aliquam eligendi ut neque minima dignissimos. Sit dicta eius rem nisi porro animi modi nemo
+                        distinctio officia.
+                    </blockquote>
+                    <figure>
+                        <img src="./img/avatar_g.jpg" alt="person">
+                        Lorem Denfina
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------------------------------ End Testimonials -------------------------------------------->
 </body>
 
 </html>
