complete design blog

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </blockquote>
                     <figure>
                         <img src="./img/person3.jpeg" alt="person">
-                        <span>Denfina</span> 
+                        <span>Denfina</span>
                     </figure>
                 </div>
             </div>
@@ -155,6 +155,111 @@
         </div>
     </section>
     <!------------------------------------ End Testimonials -------------------------------------------->
+
+    <!-- Start Sponsors -->
+    <section class="sponsors-section">
+        <h1 class="title-section">Sponsors</h1>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/real_logo.png" alt="barce">
+                    <figcaption>Real Marid</figcaption>
+                </figure>
+            </div>
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/barcelona_logo.png" alt="barce">
+                    <figcaption>Barcelona</figcaption>
+                </figure>
+            </div>
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/tottenham_logo.png" alt="barce">
+                    <figcaption>Totemham Hotspur</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/mctunited_logo.png" alt="barce">
+                    <figcaption>Manchester United</figcaption>
+                </figure>
+            </div>
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/mctcity_logo.png" alt="barce">
+                    <figcaption>Machester City</figcaption>
+                </figure>
+            </div>
+            <div class="col span-1-of-3">
+                <figure class="sponsors-logo">
+                    <img src="./img/juventus_logo.png" alt="barce">
+                    <figcaption>Jventus</figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+    <!--------------------------------------- End Sponsors ------------------------------------------------>
+
+    <!-- Start Contact -->
+    <section class="contact-section">
+        <div class="row">
+            <div class="col span-1-of-2">
+                <div class="infomation">
+                    <ul class="contact-address">
+                        <li><i class="fas fa-map-marker-alt"></i>Addresst: 56 Tran quoc tuan, phuong 1, go vap.</li>
+                        <li><i class="far fa-envelope"></i>Email: chongnguyen19@gmail.com.</li>
+                        <li><i class="fas fa-phone-square-alt"></i>Std: 08 2222 5859.</li>
+                    </ul>
+                    <ul class="contact-icon">
+                        <li><i class="fab fa-facebook-square"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-twitter-square"></i></li>
+                        <li><i class="fab fa-google-plus-square"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col span-1-of-2 contact-form">
+                <div class="box-contact">
+                    <form>
+                        <div class="col span-1-of-2 lable-comment">
+                            Name
+                        </div>
+                        <div class="col span-1-of-2 input-comment">
+                            <input type="text" placeholder="Name">
+                        </div>
+                    </form>
+                    <form>
+                        <div class="col span-1-of-2 lable-comment">
+                            Email
+                        </div>
+                        <div class="col span-1-of-2 input-comment">
+                            <input type="email" placeholder="Email">
+                        </div>
+                    </form>
+                    <form>
+                        <div class="col span-1-of-2 lable-comment">
+                            Comment
+                        </div>
+                        <div class="col span-1-of-2 input-comment">
+                            <textarea placeholder="Comment"></textarea>
+                        </div>
+                    </form>
+
+                    <a href="#" class="btn">Send it</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!------------------------------- End Contact --------------------------------------------------->
+
+
+    <!-- Footer -->
+    <footer>
+        Copyright &copy 2019 NguyenChong
+    </footer>
 </body>
 
 </html>
